k8s/notification/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: duynguyen21vnlp/ms-notification:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: regcred
        # ports:
        # - containerPort: 80
