k8s/notification/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Local
