k8s/notification/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/notification"
        backend:
          service:
            name: notification
            port:
              number: 80
